Mejora de documentacion

--- a/indexTest.html
+++ b/indexTest.html
@@ -76,7 +76,7 @@ function openZone(evt, zonaAf) {
       <button class="tablinks" onclick="openZone(event, 'L4-L5')">L4-L5</button>
       <button class="tablinks" onclick="openZone(event, 'L5-LS1')">L5-LS1</button>
 
-    </div><!-- we create the tab for each disc -->
+    </div><!-- we create the tab for each lumbar disc -->
     <div id="L1-L2" class="tabcontent">
       <h3>L1-L2</h3>
       <form>
